# PyCurrentWindow

./: .gitignore  .pre-commit-config.yaml  PyCurrentWindow.py  README.md  ROADMAP.md  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.iss  setup.py
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml
installer/: Installer.SHA256
pycurrentwindow/: __init__.py  listener.py  port_finder.py  runner.py
pycurrentwindow/utils/: __init__.py  app_data.py
src/: listener.py  main.py  port_finder.py  windowChangeListener.py
